--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   # Drift DB
   drift: ^2.25.0
   drift_flutter: ^0.2.4
+  path_provider: ^2.0.0
+  path: ^1.9.0
+
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +54,8 @@ dev_dependencies:
   drift_dev: ^2.25.0
   build_runner: ^2.4.14
 
+  # Json parsing: https://pub.dev/packages/json_serializable
+  json_serializable: ^6.9.3
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
