--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,7 +47,21 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.9.0
 
+  # Model serialization
   json_annotation: ^4.8.1
+
+  # Screen util
+  flutter_screenutil: ^5.8.4
+
+  # Mobx: https://pub.dev/packages/mobx
+  mobx: ^2.1.4
+  flutter_mobx: ^2.3.0
+
+  # SharedPrefs
+  shared_preferences: ^2.2.0
+
+  # GetX: get database
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
@@ -52,10 +69,13 @@ dev_dependencies:
 
     # Drift DB
   drift_dev: ^2.25.0
-  build_runner: ^2.4.14
+  build_runner: ^2.4.15
 
   # Json parsing: https://pub.dev/packages/json_serializable
-  json_serializable: ^6.9.3
+  json_serializable: ^6.9.0
+
+  # Reactive observable: https://pub.dev/packages/mobx_codegen
+  mobx_codegen: ^2.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -69,6 +89,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  # Generate intl files
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -105,3 +127,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_intl:
+  enabled: true
